# GammaGammaAnalysis

./: .gitignore  CMakeLists.txt  GammaGammaAnalysis.h.in  README.md
GenerateDistribution/: CMakeLists.txt  FitPeaks.C  GenerateDistribution.h.in  gamma_gate.cxx  gamma_gate_mix.cxx
GenerateDistribution/include/: FitManager.h  HistogramManager.h
GenerateDistribution/src/: FitManager.cpp  GenerateDistribution.cpp  HistogramManager.cpp
GenerateHistograms/: CMakeLists.txt  GammaGammaAnalysis.h.in  MakeGammaGammaHistograms.sh
GenerateHistograms/misc/: loadingQuotes.txt
GenerateHistograms/src/: gammaGammaAnalysis.cpp
misc/: loadingQuotes.txt
src/: gammaGammaAnalysis.cpp
